--- a/00-Python Object and Data Structure Basics/07-Sets and Booleans.ipynb
+++ b/00-Python Object and Data Structure Basics/07-Sets and Booleans.ipynb
@@ -285,6 +285,33 @@
    "source": [
     "Thats it! You should now have a basic understanding of Python objects and data structure types. Next, go ahead and do the assessment test!"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1, 2, 3}"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "set({1,1,2,3})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -303,7 +330,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
