--- a/04-Milestone Project - 1/02-Milestone Project 1 - Walkthrough Steps Workbook.ipynb
+++ b/04-Milestone Project - 1/02-Milestone Project 1 - Walkthrough Steps Workbook.ipynb
@@ -43,15 +43,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "from IPython.display import clear_output\n",
     "\n",
-    "def display_board(board):\n",
-    "    \n",
-    "    pass"
+    "def display_board(grid):\n",
+    "    clear_output()\n",
+    "    print(f\"\\n    |    |    \\n {grid[7]}  | {grid[8]}  | {grid[9]}  \\n    |    |    \\n--------------\\n    |    |    \\n {grid[4]}  | {grid[5]}  | {grid[6]}  \\n    |    |    \\n--------------\\n    |    |    \\n {grid[1]}  | {grid[2]}  | {grid[3]}  \\n    |    |    \\n\")\n",
+    "    "
    ]
   },
   {
@@ -63,9 +64,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "    |    |    \n",
+      " X  | O  | X  \n",
+      "    |    |    \n",
+      "--------------\n",
+      "    |    |    \n",
+      " O  | X  | O  \n",
+      "    |    |    \n",
+      "--------------\n",
+      "    |    |    \n",
+      " X  | O  | X  \n",
+      "    |    |    \n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "test_board = ['#','X','O','X','O','X','O','X','O','X']\n",
     "display_board(test_board)"
@@ -80,13 +101,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "def player_input():\n",
-    "    \n",
-    "    pass"
+    "    p1 = input(\"Player 1 please pick a marker X or O :\")\n",
+    "    p1 = p1.upper()\n",
+    "    while p1 != \"O\" and p1 != \"X\":\n",
+    "        p1 = input(\"Player 1 has entered a key other than 'X' or 'O', please enter the correct mark:\")\n",
+    "\n",
+    "    if p1 == \"O\":\n",
+    "        p2 = \"X\"\n",
+    "    elif p1 == \"X\":\n",
+    "        p2 = \"O\"\n",
+    "    return (p1,p2)"
    ]
   },
   {
@@ -98,11 +127,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Player 1 please pick a marker X or O :0\n",
+      "Player 1 has entered a key other than 'X' or 'O', please enter the correct mark:X\n",
+      "X O\n"
+     ]
+    }
+   ],
    "source": [
-    "player_input()"
+    "player1,player2 = player_input()\n",
+    "print(player1,player2)"
    ]
   },
   {
@@ -114,13 +154,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "def place_marker(board, marker, position):\n",
-    "    \n",
-    "    pass"
+    "    board[position] = marker"
    ]
   },
   {
@@ -132,11 +171,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "    |    |    \n",
+      " X  |    | X  \n",
+      "    |    |    \n",
+      "--------------\n",
+      "    |    |    \n",
+      " O  | X  | O  \n",
+      "    |    |    \n",
+      "--------------\n",
+      "    |    |    \n",
+      " X  | O  | X  \n",
+      "    |    |    \n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "place_marker(test_board,'$',8)\n",
+    "place_marker(test_board,' ',8)\n",
     "display_board(test_board)"
    ]
   },
@@ -144,18 +203,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Step 4: Write a function that takes in a board and a mark (X or O) and then checks to see if that mark has won. **"
+    "\n",
+    "**Step 4: Write a function that takes in a board and a mark (X or O) and then checks to see if that mark has won.**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
     "def win_check(board, mark):\n",
-    "    \n",
-    "    pass"
+    "    marker = list(mark)*3\n",
+    "    if (marker == board[1:4]) or (marker == board[4:7]) or  (marker == board[7:]) or  (marker == [board[1],board[4],board[7]]) or  (marker == [board[2],board[5],board[8]]) or  (marker == [board[3],board[6],board[9]]) or  (marker == [board[1],board[5],board[9]]) or  (marker == [board[3],board[5],board[7]]):\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False\n",
+    "    "
    ]
   },
   {
@@ -167,11 +231,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "win_check(test_board,'X')"
+    "win_check(test_board,'O')"
    ]
   },
   {
@@ -183,14 +258,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "import random\n",
     "\n",
     "def choose_first():\n",
-    "    pass"
+    "    return random.choice([\"Player1\",\"Player2\"])\n",
+    "    "
    ]
   },
   {
@@ -202,13 +278,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "def space_check(board, position):\n",
-    "    \n",
-    "    pass"
+    "    return board[position] == \" \""
    ]
   },
   {
@@ -220,13 +295,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "def full_board_check(board):\n",
-    "    \n",
-    "    pass"
+    "    return not \" \" in set(board)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "full_board_check(test_board)"
    ]
   },
   {
@@ -238,13 +332,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def player_choice(board):\n",
+    "def player_choice(board,player):\n",
+    "    chosen = False\n",
     "    \n",
-    "    pass"
+    "    while not chosen:\n",
+    "        position = int(input(f\"{player}, Please enter a number for position (1-9):\"))\n",
+    "        if space_check(board,position):\n",
+    "            chosen = True\n",
+    "            return position\n",
+    "        else:\n",
+    "            print(f'The position you have entered i.e. {position} is already occupied.')\n",
+    "    "
    ]
   },
   {
@@ -256,13 +358,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "def replay():\n",
-    "    \n",
-    "    pass"
+    "    user_input = input(\"Do you want to play again ? \\(Yes/No\\) :\")\n",
+    "    user_input = user_input.lower()\n",
+    "    if user_input == \"yes\":\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False"
    ]
   },
   {
@@ -280,22 +386,85 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Functions\n",
+    "# display_board(board)\n",
+    "# player_input()\n",
+    "# place_marker(board,marker,position)\n",
+    "# win_check(board,mark)\n",
+    "# choose_first()\n",
+    "# space_check(board,position)\n",
+    "# full_board_check(board)\n",
+    "# player_choice(board)\n",
+    "# replay()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "    |    |    \n",
+      " X  |    |    \n",
+      "    |    |    \n",
+      "--------------\n",
+      "    |    |    \n",
+      "    | X  |    \n",
+      "    |    |    \n",
+      "--------------\n",
+      "    |    |    \n",
+      " O  | O  | X  \n",
+      "    |    |    \n",
+      "\n",
+      "Yaay!!! Player1 has won the game!!\n",
+      "Do you want to play again ? \\(Yes/No\\) :no\n"
+     ]
+    }
+   ],
+   "source": [
     "print('Welcome to Tic Tac Toe!')\n",
     "\n",
-    "#while True:\n",
+    "while True:\n",
     "    # Set the game up here\n",
-    "    #pass\n",
-    "\n",
-    "    #while game_on:\n",
-    "        #Player 1 Turn\n",
-    "        \n",
-    "        \n",
-    "        # Player2's turn.\n",
+    "    player1,player2 = player_input()\n",
+    "    player = choose_first()\n",
+    "    print(f'The first player to go will be {player}')\n",
+    "    board = ['#',' ',' ',' ',' ',' ',' ',' ',' ',' ']\n",
+    "    game_on = True\n",
+    "    while game_on:\n",
+    "        if player == \"Player1\":\n",
+    "            #Player 1 Turn\n",
     "            \n",
-    "            #pass\n",
-    "\n",
-    "    #if not replay():\n",
-    "        #break"
+    "            position = player_choice(board,player)\n",
+    "            place_marker(board,player1,position)\n",
+    "            display_board(board)\n",
+    "            if win_check(board,player1):\n",
+    "                print(f\"Yaay!!! {player} has won the game!!\")\n",
+    "                break\n",
+    "            else:\n",
+    "                player = \"Player2\"\n",
+    "        else:\n",
+    "            # Player2's turn.\n",
+    "            \n",
+    "            position = player_choice(board,player)\n",
+    "            place_marker(board,player2,position)\n",
+    "            display_board(board)\n",
+    "            if win_check(board,player2):\n",
+    "                print(f\"Yaay!!! {player} has won the game!!\")\n",
+    "                break\n",
+    "            else:\n",
+    "                player = \"Player1\"\n",
+    "        \n",
+    "        if full_board_check(board):\n",
+    "            print(\"Game Over!!!!! Its a Draw!!!\")\n",
+    "            game_on = False\n",
+    "        \n",
+    "    if not replay():\n",
+    "        break"
    ]
   },
   {
@@ -306,6 +475,13 @@
    "source": [
     "## Good Job!"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -324,7 +500,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
